# TreasureMasterBot

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  GAME_MECHANICS.md  OPENCV.md  PROJECT.md  ROADMAP.md  SOLVER.md  STYLE.md  TESTING.md  VISION.md  config.json  main.py  pyproject.toml
app/: __init__.py
app/automation/: __init__.py
app/core/: __init__.py  adb.py  capture.py  device.py  exceptions.py  fps.py  frame_buffer.py  models.py  scrcpy.py  threading_model.py
app/gui/: __init__.py
app/solver/: __init__.py
app/utils/: __init__.py  config.py  logging_setup.py
app/vision/: __init__.py
tests/: __init__.py  test_adb.py  test_capture.py  test_device.py  test_fps.py  test_frame_buffer.py  test_scrcpy.py
