[project]
name = "treasuremasterbot"
version = "0.2.0"
description = "Desktop automation application for the Android game Treasure Master."
requires-python = ">=3.14"
dependencies = [
    "PySide6>=6.8",
    "opencv-python>=4.10",
    "numpy>=2.1",
    "av>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
